--- a/src/components/Card/CardGrag/styles.css
+++ b/src/components/Card/CardGrag/styles.css
@@ -1,19 +1,28 @@
 @font-face {
-    font-family: "Poppins";
-    src: url("../../../fonts/Poppins/Poppins-Black.ttf");
-    src: url("../../../fonts/Poppins/Poppins-Bold.ttf");
-    src: url("../../../fonts/Poppins/Poppins-ExtraBold.ttf");
-    src: url("../../../fonts/Poppins/Poppins-ExtraLight.ttf");
-    src: url("../../../fonts/Poppins/Poppins-Light.ttf");
-    src: url("../../../fonts/Poppins/Poppins-Medium.ttf");
+    font-family: "Bebas";
+    src: url("../../../fonts/BebasNeue-Regular.ttf");
+  }
+  
+  @font-face {
+    font-family: "Poppins-Regular";
     src: url("../../../fonts/Poppins/Poppins-Regular.ttf");
-    src: url("../../../fonts/Poppins/Poppins-SemiBold.ttf");
-    src: url("../../../fonts/Poppins/Poppins-Thin.ttf");
+  }
+  @font-face {
+    font-family: "Poppins-Medium";
+    src: url("../../../fonts/Poppins/Poppins-Medium.ttf");
+  }
+  @font-face {
+    font-family: "Poppins-Bold";
+    src: url("../../../fonts/Poppins/Poppins-Bold.ttf");
+  }
+  @font-face {
+    font-family: "Poppins-Light";
+    src: url("../../../fonts/Poppins/Poppins-Light.ttf");
   }
 
 .subtitleCardDrag {
     color:#FFF;
-    font-family: "Poppins-Regular", sans-serif;
+    font-family: "Poppins-Regular";
     font-size: .8em;
     font-style: normal;
     font-weight: 400;
@@ -25,7 +34,7 @@
 .titleCardDrag {
     color: #FFF;
     text-align: start;
-    font-family: "Poppins", sans-serif;
+    font-family: "Poppins-Medium";
     font-size: 1.4em;
     font-style: normal;
     font-weight: 500;
