--- a/src/components/Card/CardSelect/styles.css
+++ b/src/components/Card/CardSelect/styles.css
@@ -1,14 +1,23 @@
 @font-face {
-    font-family: "Poppins";
-    src: url("../../../fonts/Poppins/Poppins-Black.ttf");
-    src: url("../../../fonts/Poppins/Poppins-Bold.ttf");
-    src: url("../../../fonts/Poppins/Poppins-ExtraBold.ttf");
-    src: url("../../../fonts/Poppins/Poppins-ExtraLight.ttf");
-    src: url("../../../fonts/Poppins/Poppins-Light.ttf");
-    src: url("../../../fonts/Poppins/Poppins-Medium.ttf");
+    font-family: "Bebas";
+    src: url("../../../fonts/BebasNeue-Regular.ttf");
+  }
+  
+  @font-face {
+    font-family: "Poppins-Regular";
     src: url("../../../fonts/Poppins/Poppins-Regular.ttf");
-    src: url("../../../fonts/Poppins/Poppins-SemiBold.ttf");
-    src: url("../../../fonts/Poppins/Poppins-Thin.ttf");
+  }
+  @font-face {
+    font-family: "Poppins-Medium";
+    src: url("../../../fonts/Poppins/Poppins-Medium.ttf");
+  }
+  @font-face {
+    font-family: "Poppins-Bold";
+    src: url("../../../fonts/Poppins/Poppins-Bold.ttf");
+  }
+  @font-face {
+    font-family: "Poppins-Light";
+    src: url("../../../fonts/Poppins/Poppins-Light.ttf");
   }
 
 .containerCardSelect {
@@ -39,7 +48,7 @@
 }
 .textSelect {
     color: #FFF;
-    font-family: "Poppins", sans-serif;
+    font-family: "Poppins-Light";
     font-size: 1em;
     font-style: normal;
     font-weight: 300;
@@ -48,7 +57,7 @@
 }
 .titleSelect {
     color: #FFF;
-    font-family: "Poppins", sans-serif;
+    font-family: "Poppins-Medium";
     font-size: 2em;
     margin: 0px;
     font-style: normal;
