--- a/src/components/Card/CardTurist/styles.css
+++ b/src/components/Card/CardTurist/styles.css
@@ -1,14 +1,23 @@
 @font-face {
-  font-family: "Poppins";
-  src: url("../../../fonts/Poppins/Poppins-Black.ttf");
-  src: url("../../../fonts/Poppins/Poppins-Bold.ttf");
-  src: url("../../../fonts/Poppins/Poppins-ExtraBold.ttf");
-  src: url("../../../fonts/Poppins/Poppins-ExtraLight.ttf");
-  src: url("../../../fonts/Poppins/Poppins-Light.ttf");
-  src: url("../../../fonts/Poppins/Poppins-Medium.ttf");
+  font-family: "Bebas";
+  src: url("../../../fonts/BebasNeue-Regular.ttf");
+}
+
+@font-face {
+  font-family: "Poppins-Regular";
   src: url("../../../fonts/Poppins/Poppins-Regular.ttf");
-  src: url("../../../fonts/Poppins/Poppins-SemiBold.ttf");
-  src: url("../../../fonts/Poppins/Poppins-Thin.ttf");
+}
+@font-face {
+  font-family: "Poppins-Medium";
+  src: url("../../../fonts/Poppins/Poppins-Medium.ttf");
+}
+@font-face {
+  font-family: "Poppins-Bold";
+  src: url("../../../fonts/Poppins/Poppins-Bold.ttf");
+}
+@font-face {
+  font-family: "Poppins-Light";
+  src: url("../../../fonts/Poppins/Poppins-Light.ttf");
 }
 
 .turismCardOne {
@@ -82,7 +91,7 @@
 .titleCardTurOne {
   color: white;
   text-align: center;
-  font-family: "Poppins-Regular", sans-serif;
+  font-family: "Poppins-Regular";
   font-size: 1.2em;
   font-style: normal;
   font-weight: 400;
@@ -112,7 +121,7 @@
 }
 .textCardTur {
   color: #fff;
-  font-family: "Poppins-Light", sans-serif;
+  font-family: "Poppins-Light";
   font-size: 1em;
   font-style: normal;
   font-weight: 500;
