--- a/src/components/Card/styles.css
+++ b/src/components/Card/styles.css
@@ -2,17 +2,22 @@
     font-family: "Bebas";
     src: url("../../fonts/BebasNeue-Regular.ttf");
   }
+  
   @font-face {
-    font-family: "Poppins";
-    src: url("../../fonts/Poppins/Poppins-Black.ttf");
-    src: url("../../fonts/Poppins/Poppins-Bold.ttf");
-    src: url("../../fonts/Poppins/Poppins-ExtraBold.ttf");
-    src: url("../../fonts/Poppins/Poppins-ExtraLight.ttf");
-    src: url("../../fonts/Poppins/Poppins-Light.ttf");
-    src: url("../../fonts/Poppins/Poppins-Medium.ttf");
+    font-family: "Poppins-Regular";
     src: url("../../fonts/Poppins/Poppins-Regular.ttf");
-    src: url("../../fonts/Poppins/Poppins-SemiBold.ttf");
-    src: url("../../fonts/Poppins/Poppins-Thin.ttf");
+  }
+  @font-face {
+    font-family: "Poppins-Medium";
+    src: url("../../fonts/Poppins/Poppins-Medium.ttf");
+  }
+  @font-face {
+    font-family: "Poppins-Bold";
+    src: url("../../fonts/Poppins/Poppins-Bold.ttf");
+  }
+  @font-face {
+    font-family: "Poppins-Light";
+    src: url("../../fonts/Poppins/Poppins-Light.ttf");
   }
 .containerCard {
     border-radius: 30px;
@@ -32,7 +37,7 @@
 }
 .textCard {
     color: #FFF;
-    font-family: "Poppins-Light", sans-serif;
+    font-family: "Poppins-Light";
     font-size: 1.2em;
     font-weight: 500;
     line-height: 150%;
@@ -96,7 +101,6 @@
 
     }
     .textCard {
-        font-family: "Poppins-Light", sans-serif;
         font-size: .9em;
         font-weight: 400;
     }
@@ -117,7 +121,6 @@
         width: 150px;
     }
     .textCard {
-        font-family: "Poppins-Light", sans-serif;
         font-size: 1em;
     }
     .containerCard {
@@ -139,7 +142,6 @@
         width: 70%;
     }
     .textCard {
-        font-family: "Poppins-Light", sans-serif;
         font-size: 1em;
     }
     .tituloCard {
@@ -169,7 +171,6 @@
 @media (min-width: 1201px) and (max-width: 1440px) {
     .textCard {
         font-size: 1em;
-        font-family: "Poppins-Light", sans-serif;
     }
     .containerCard {
         padding: 60px;
@@ -183,7 +184,6 @@
 }
 @media (min-width: 1441px) {
     .textCard {
-        font-family: "Poppins-Light", sans-serif;
         font-size: 1.2em;
         width: 90%;
     }
