--- a/src/components/Slogan/styles.css
+++ b/src/components/Slogan/styles.css
@@ -1,3 +1,25 @@
+@font-face {
+    font-family: "Bebas";
+    src: url("../../fonts/BebasNeue-Regular.ttf");
+  }
+  
+  @font-face {
+    font-family: "Poppins-Regular";
+    src: url("../../fonts/Poppins/Poppins-Regular.ttf");
+  }
+  @font-face {
+    font-family: "Poppins-Medium";
+    src: url("../../fonts/Poppins/Poppins-Medium.ttf");
+  }
+  @font-face {
+    font-family: "Poppins-Bold";
+    src: url("../../fonts/Poppins/Poppins-Bold.ttf");
+  }
+  @font-face {
+    font-family: "Poppins-Light";
+    src: url("../../fonts/Poppins/Poppins-Light.ttf");
+  }
+
 .sloganContainer {
     display: flex;
     width: 100%;
@@ -15,7 +37,7 @@
 }
 .titleSlogan {
     color: #FFF;
-    font-family: "Poppins", sans-serif;
+    font-family: "Poppins-Medium";
     font-size: 5em;
     font-style: normal;
     font-weight: 500;
@@ -100,7 +122,7 @@
 }
 @media (min-width: 1201px) and (max-width: 1440px) {
     .titleSloganContainer {
-        width: 60%;
+        width: 70%;
     }
 }
 @media (min-width: 1441px) {
