--- a/src/screens/Terminos/styles.css
+++ b/src/screens/Terminos/styles.css
@@ -1,20 +1,34 @@
 @font-face {
-  font-family: "Poppins";
-  src: url("../../fonts/Poppins/Poppins-Black.ttf");
-  src: url("../../fonts/Poppins/Poppins-Bold.ttf");
-  src: url("../../fonts/Poppins/Poppins-ExtraBold.ttf");
-  src: url("../../fonts/Poppins/Poppins-ExtraLight.ttf");
-  src: url("../../fonts/Poppins/Poppins-Light.ttf");
-  src: url("../../fonts/Poppins/Poppins-Medium.ttf");
-  src: url("../../fonts/Poppins/Poppins-Regular.ttf");
-  src: url("../../fonts/Poppins/Poppins-SemiBold.ttf");
-  src: url("../../fonts/Poppins/Poppins-Thin.ttf");
-}
-@font-face {
   font-family: "Bebas";
   src: url("../../fonts/BebasNeue-Regular.ttf");
 }
 
+@font-face {
+  font-family: "Poppins-Regular";
+  src: url("../../fonts/Poppins/Poppins-Regular.ttf");
+}
+@font-face {
+  font-family: "Poppins-Medium";
+  src: url("../../fonts/Poppins/Poppins-Medium.ttf");
+}
+@font-face {
+  font-family: "Poppins-Bold";
+  src: url("../../fonts/Poppins/Poppins-Bold.ttf");
+}
+@font-face {
+  font-family: "Poppins-Light";
+  src: url("../../fonts/Poppins/Poppins-Light.ttf");
+}
+
+.titleTerms {
+  font-family: 'Poppins-Medium';
+}
+.manual {
+  font-family: 'Poppins-Regular';
+}
+.textScroll, .textScrollPix {
+  font-family: 'Poppins-Light';
+}
 
 @media (min-width: 360px) {
 .containerAllTerms {
@@ -43,7 +57,7 @@
   color: #fff;
   text-align: start;
   text-shadow: 0px 4px 134px #000;
-  font-family: "Poppins";
+  font-family: "Poppins-Medium";
   font-size: 2em;
   font-style: normal;
   font-weight: 600;
@@ -51,7 +65,7 @@
 }
 .manual {
   color: #fff;
-  font-family: "Poppins";
+  font-family: "Poppins-Regular";
   font-size: 32px;
   font-style: normal;
   font-weight: 500;
@@ -134,7 +148,7 @@
   color: #fff;
   text-align: center;
   text-shadow: 0px 4px 134px #000;
-  font-family: "Poppins";
+  font-family: "Poppins-Medium";
   font-size: 50px;
   font-style: normal;
   font-weight: 600;
@@ -142,7 +156,7 @@
 }
 .manual {
   color: #fff;
-  font-family: "Poppins";
+  font-family: "Poppins-Regular";
   font-size: 32px;
   font-style: normal;
   font-weight: 500;
