--- a/src/screens/Turist/TuristFive/styles.css
+++ b/src/screens/Turist/TuristFive/styles.css
@@ -1,14 +1,23 @@
 @font-face {
-    font-family: "Poppins";
-    src: url("../../../fonts/Poppins/Poppins-Black.ttf");
-    src: url("../../../fonts/Poppins/Poppins-Bold.ttf");
-    src: url("../../../fonts/Poppins/Poppins-ExtraBold.ttf");
-    src: url("../../../fonts/Poppins/Poppins-ExtraLight.ttf");
-    src: url("../../../fonts/Poppins/Poppins-Light.ttf");
-    src: url("../../../fonts/Poppins/Poppins-Medium.ttf");
+    font-family: "Bebas";
+    src: url("../../../fonts/BebasNeue-Regular.ttf");
+  }
+  
+  @font-face {
+    font-family: "Poppins-Regular";
     src: url("../../../fonts/Poppins/Poppins-Regular.ttf");
-    src: url("../../../fonts/Poppins/Poppins-SemiBold.ttf");
-    src: url("../../../fonts/Poppins/Poppins-Thin.ttf");
+  }
+  @font-face {
+    font-family: "Poppins-Medium";
+    src: url("../../../fonts/Poppins/Poppins-Medium.ttf");
+  }
+  @font-face {
+    font-family: "Poppins-Bold";
+    src: url("../../../fonts/Poppins/Poppins-Bold.ttf");
+  }
+  @font-face {
+    font-family: "Poppins-Light";
+    src: url("../../../fonts/Poppins/Poppins-Light.ttf");
   }
 
 .containerFiveTitle {
@@ -26,7 +35,7 @@
 .titleTuristFive {
     color:#FFF;
     text-align: center;
-    font-family: "Poppins", sans-serif;
+    font-family: "Poppins-Medium";
     font-size: 4.5em;
     font-style: normal;
     font-weight: 500;
