--- a/src/screens/Turist/TuristFour/styles.css
+++ b/src/screens/Turist/TuristFour/styles.css
@@ -1,7 +1,24 @@
 @font-face {
-    font-family: "Bebas";
-    src: url("../../../fonts/BebasNeue-Regular.ttf");
-  }
+  font-family: "Bebas";
+  src: url("../../../fonts/BebasNeue-Regular.ttf");
+}
+
+@font-face {
+  font-family: "Poppins-Regular";
+  src: url("../../../fonts/Poppins/Poppins-Regular.ttf");
+}
+@font-face {
+  font-family: "Poppins-Medium";
+  src: url("../../../fonts/Poppins/Poppins-Medium.ttf");
+}
+@font-face {
+  font-family: "Poppins-Bold";
+  src: url("../../../fonts/Poppins/Poppins-Bold.ttf");
+}
+@font-face {
+  font-family: "Poppins-Light";
+  src: url("../../../fonts/Poppins/Poppins-Light.ttf");
+}
 
 .titleTuristFour {
     color: #FFF;
@@ -166,6 +183,9 @@
   .carouselElement {
     width: 600px;
   }
+  .subtitleFour {
+    font-size: 1.2em;
+  }
 
 }
 @media (min-width: 1441px)  {
@@ -187,7 +207,8 @@
     width: 700px;
     height: 550px;
     position: absolute;
-    right: 750px;
+    /* right: 750px; */
+    right: 550px;
   }
   .videoElement {
     width: 320px;
