--- a/src/screens/Turist/TuristSix/styles.css
+++ b/src/screens/Turist/TuristSix/styles.css
@@ -1,14 +1,23 @@
 @font-face {
-  font-family: "Poppins";
-  src: url("../../../fonts/Poppins/Poppins-Black.ttf");
-  src: url("../../../fonts/Poppins/Poppins-Bold.ttf");
-  src: url("../../../fonts/Poppins/Poppins-ExtraBold.ttf");
-  src: url("../../../fonts/Poppins/Poppins-ExtraLight.ttf");
-  src: url("../../../fonts/Poppins/Poppins-Light.ttf");
-  src: url("../../../fonts/Poppins/Poppins-Medium.ttf");
+  font-family: "Bebas";
+  src: url("../../../fonts/BebasNeue-Regular.ttf");
+}
+
+@font-face {
+  font-family: "Poppins-Regular";
   src: url("../../../fonts/Poppins/Poppins-Regular.ttf");
-  src: url("../../../fonts/Poppins/Poppins-SemiBold.ttf");
-  src: url("../../../fonts/Poppins/Poppins-Thin.ttf");
+}
+@font-face {
+  font-family: "Poppins-Medium";
+  src: url("../../../fonts/Poppins/Poppins-Medium.ttf");
+}
+@font-face {
+  font-family: "Poppins-Bold";
+  src: url("../../../fonts/Poppins/Poppins-Bold.ttf");
+}
+@font-face {
+  font-family: "Poppins-Light";
+  src: url("../../../fonts/Poppins/Poppins-Light.ttf");
 }
 
 .containerSectionSixTu {
@@ -30,7 +39,7 @@
   color: #fff;
   text-align: center;
   text-shadow: 0px 4px 134px #000;
-  font-family: "Poppins", sans-serif;
+  font-family: "Poppins-Medium";
   font-size: 5em;
   font-weight: 500;
   line-height: 110%;
