--- a/src/screens/Turist/TuristThree/styles.css
+++ b/src/screens/Turist/TuristThree/styles.css
@@ -1,15 +1,25 @@
 @font-face {
-    font-family: "Poppins";
-    src: url("../../../fonts/Poppins/Poppins-Black.ttf");
-    src: url("../../../fonts/Poppins/Poppins-Bold.ttf");
-    src: url("../../../fonts/Poppins/Poppins-ExtraBold.ttf");
-    src: url("../../../fonts/Poppins/Poppins-ExtraLight.ttf");
-    src: url("../../../fonts/Poppins/Poppins-Light.ttf");
-    src: url("../../../fonts/Poppins/Poppins-Medium.ttf");
-    src: url("../../../fonts/Poppins/Poppins-Regular.ttf");
-    src: url("../../../fonts/Poppins/Poppins-SemiBold.ttf");
-    src: url("../../../fonts/Poppins/Poppins-Thin.ttf");
+    font-family: "Bebas";
+    src: url("../../../fonts/BebasNeue-Regular.ttf");
   }
+  
+  @font-face {
+    font-family: "Poppins-Regular";
+    src: url("../../../fonts/Poppins/Poppins-Regular.ttf");
+  }
+  @font-face {
+    font-family: "Poppins-Medium";
+    src: url("../../../fonts/Poppins/Poppins-Medium.ttf");
+  }
+  @font-face {
+    font-family: "Poppins-Bold";
+    src: url("../../../fonts/Poppins/Poppins-Bold.ttf");
+  }
+  @font-face {
+    font-family: "Poppins-Light";
+    src: url("../../../fonts/Poppins/Poppins-Light.ttf");
+  }
+
 
 .containerTurThree {
     display: flex;
@@ -24,7 +34,7 @@
 .titleTuristThree {
     color: #FFF;
     text-align: center;
-    font-family: "Poppins-Light", sans-serif;
+    font-family: "Poppins-Medium";
     text-shadow: 0px 4px 100px #000, 0px 4px 100px #000;
     z-index: 90;
     font-size: 3.5em;
