--- a/src/screens/SectionSix/styles.css
+++ b/src/screens/SectionSix/styles.css
@@ -94,6 +94,7 @@
 @media (min-width: 360px) and (max-width: 576px) {
     .titleSectionSix {
         font-size: 2.7em;
+        text-align: center;
     }
     .sectionSix {
         flex-direction: column-reverse;
