cambios en @media

--- a/src/components/Card/CardTurist/styles.css
+++ b/src/components/Card/CardTurist/styles.css
@@ -142,7 +142,7 @@
   width: 60%;
 }
 
-@media (min-width: 360px) and (max-width: 576px) {
+@media (max-width: 576px) {
   .askCardTur {
     font-size: 3em;
   }
