--- a/src/components/Languaje/styles.css
+++ b/src/components/Languaje/styles.css
@@ -82,7 +82,7 @@
 }
 
 
-@media (min-width: 360px) and (max-width: 576px){
+@media (max-width: 576px){
     .containerLanguage {
         width: 100%;
     }
