--- a/src/components/Phone/styles.css
+++ b/src/components/Phone/styles.css
@@ -28,7 +28,7 @@
     z-index: 9;
 }
 
-@media (min-width: 360px) and (max-width: 576px) {
+@media (max-width: 576px) {
     .phoneimg {
         width: 325px;
     }
