--- a/src/components/Switch/styles.css
+++ b/src/components/Switch/styles.css
@@ -41,7 +41,7 @@
     }
 }
 
-@media (min-width: 360px) and (max-width: 576px) {
+@media (max-width: 576px) {
     .switch {
         width: 90%;
     }
