--- a/src/screens/Turist/TuristOne/styles.css
+++ b/src/screens/Turist/TuristOne/styles.css
@@ -78,7 +78,7 @@
     }
 }
 
-@media (min-width: 360px) and (max-width: 576px) {
+@media (max-width: 576px) {
     .imgPhoneOneTurist {
         width: 300px;
     }
