--- a/src/screens/Turist/TuristThree/styles.css
+++ b/src/screens/Turist/TuristThree/styles.css
@@ -44,7 +44,7 @@
     line-height: 100.044%;
 }
 
-@media (min-width: 360px) and (max-width: 576px) {
+@media (max-width: 576px) {
     .titleTuristThree {
         font-size: 2em;
         width: 90%;
