--- a/src/screens/Turist/styles.css
+++ b/src/screens/Turist/styles.css
@@ -136,7 +136,7 @@
 
 
 
-@media (min-width: 360px) and (max-width: 576px) {
+@media (max-width: 576px) {
   .coinOneT, .coinTwoT {
       width: 20%;
   }
