--- a/src/components/Card/CardGrag/styles.css
+++ b/src/components/Card/CardGrag/styles.css
@@ -69,7 +69,7 @@
 }
 
 
-@media (min-width: 360px) and (max-width: 576px) {
+@media (max-width: 576px) {
     .itemDrag {
         width: 300px;
         height: 450px;
