--- a/src/components/HeroText/styles.css
+++ b/src/components/HeroText/styles.css
@@ -87,7 +87,7 @@
   }
 }
 
-@media (min-width: 360px) and (max-width: 576px) {
+@media (max-width: 576px) {
   .titleHero {
     font-size: 2.6em;
     width: 90%;
