--- a/src/components/NavBar/styles.css
+++ b/src/components/NavBar/styles.css
@@ -24,7 +24,7 @@
 }
 
 
-@media (min-width: 360px) and (max-width: 576px){
+@media (max-width: 576px){
     .containerLogo {
         display: flex;
         width: 100%;      
