--- a/src/components/buttonFour/styles.css
+++ b/src/components/buttonFour/styles.css
@@ -64,7 +64,7 @@
 }
 
 
-@media (min-width: 360px) and (max-width: 576px){
+@media (max-width: 576px){
     .buttonFour {
         width: 100%;
         padding: 10px;
