--- a/src/screens/SectionFive/styles.css
+++ b/src/screens/SectionFive/styles.css
@@ -108,7 +108,7 @@
 
 
 
-@media (min-width: 360px) and (max-width: 576px) {
+@media (max-width: 576px) {
     .containerDragCard {
         display: flex;
         align-items: center;
