--- a/src/screens/SectionSix/styles.css
+++ b/src/screens/SectionSix/styles.css
@@ -91,7 +91,7 @@
 }
 
 
-@media (min-width: 360px) and (max-width: 576px) {
+@media (max-width: 576px) {
     .titleSectionSix {
         font-size: 2.7em;
         text-align: center;
