--- a/src/screens/Turist/TuristFive/styles.css
+++ b/src/screens/Turist/TuristFive/styles.css
@@ -63,7 +63,7 @@
     display: none; 
 } 
 
-@media (min-width: 360px) and (max-width: 576px)  {
+@media (max-width: 576px)  {
     .titleTuristFive {
         width: 60%;
         font-size: 1.8em;
