--- a/src/screens/Turist/TuristSix/styles.css
+++ b/src/screens/Turist/TuristSix/styles.css
@@ -114,7 +114,7 @@
   z-index: 1;
 }
 
-@media (min-width: 360px) and (max-width: 576px) {
+@media (max-width: 576px) {
   .containerTitleSix {
     width: 90%;
   }
