--- a/src/screens/Turist/TuristTwo/styles.css
+++ b/src/screens/Turist/TuristTwo/styles.css
@@ -50,7 +50,7 @@
 }
   
 
-@media (min-width: 360px) and (max-width: 576px)  {
+@media (max-width: 576px)  {
   .titleTuristTwo {
     font-size: 2.5em;
     width: 90%;
