--- a/src/screens/styles.css
+++ b/src/screens/styles.css
@@ -92,7 +92,7 @@
     }
 }
 
-@media (min-width: 360px) and (max-width: 576px) {
+@media (max-width: 576px) {
     .coinOne, .coinTwo {
         width: 30%;
     }
