--- a/src/components/Card/CardSelect/styles.css
+++ b/src/components/Card/CardSelect/styles.css
@@ -66,7 +66,7 @@
     text-align: start;
 }
 
-@media (min-width: 360px) and (max-width: 768px) {
+@media (max-width: 768px) {
     .containerCardSelect {
         flex-direction: column;
         height: auto;
