--- a/src/screens/Turist/TuristFour/styles.css
+++ b/src/screens/Turist/TuristFour/styles.css
@@ -100,6 +100,9 @@
       justify-content: flex-start;
       margin-top: 50px;
     }
+    .containerTextFour {
+      width: 90%;
+    }
     .videoElement {
       width: auto;
       height: 500px;
