--- a/src/components/buttonFour/styles.css
+++ b/src/components/buttonFour/styles.css
@@ -21,10 +21,11 @@
   }
 
   .buttonFour.active {
-    background:
+    /* background:
     linear-gradient(hwb(0 48% 52%), hwb(0 48% 52%)) padding-box,
     linear-gradient(40deg, rgba(255, 255, 255, 0.795),  rgba(255, 255, 255, 0.36)) border-box;
-  
+   */
+   background-color:hwb(0 48% 52%);;
     color: white;
   }
 .containerButtonFour {
@@ -35,10 +36,10 @@
 }
 .buttonFour {
     border: 2px solid transparent;
-    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25) inset;
+    /* box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25) inset; */
     border-radius: 10px;
     display: inline-block;
-    backdrop-filter: blur(5px);
+    /* backdrop-filter: blur(5px); */
     width: 100%;
     height: 64px;
     gap: 1em;
@@ -57,10 +58,11 @@
     margin: 0px;
 }
 .buttonFour:hover {
-    background:
+    /* background:
     linear-gradient(hwb(0 48% 52%), hwb(0 48% 52%)) padding-box,
-    linear-gradient(40deg, rgba(255, 255, 255, 0.36),rgba(0, 255, 225, 0.6)) border-box;
-    color: #00FFE1;
+    linear-gradient(40deg, rgba(255, 255, 255, 0.36),rgba(0, 255, 225, 0.6)) border-box; */
+    background-color: #00ffe1c7;
+    color: #1e1e1e;
 }
 
 
