--- a/src/screens/SectionFive/styles.css
+++ b/src/screens/SectionFive/styles.css
@@ -84,7 +84,8 @@
     justify-content: flex-start;
     flex-direction: column;
     width: 100%;
-    height: 100vh;
+    height: auto;
+    margin: 100px 0px;
 }
 .containerFive {
     display: flex;
