--- a/src/components/buttonComponent/styles.css
+++ b/src/components/buttonComponent/styles.css
@@ -1,24 +1,23 @@
-
-  @font-face {
-    font-family: "Bebas";
-    src: url("../../fonts/BebasNeue-Regular.ttf");
-  }
-  @font-face {
-    font-family: "Poppins-Regular";
-    src: url("../../fonts/Poppins/Poppins-Regular.ttf");
-  }
-  @font-face {
-    font-family: "Poppins-Medium";
-    src: url("../../fonts/Poppins/Poppins-Medium.ttf");
-  }
-  @font-face {
-    font-family: "Poppins-Bold";
-    src: url("../../fonts/Poppins/Poppins-Bold.ttf");
-  }
-  @font-face {
-    font-family: "Poppins-Light";
-    src: url("../../fonts/Poppins/Poppins-Light.ttf");
-  }
+@font-face {
+  font-family: "Bebas";
+  src: url("../../fonts/BebasNeue-Regular.ttf");
+}
+@font-face {
+  font-family: "Poppins-Regular";
+  src: url("../../fonts/Poppins/Poppins-Regular.ttf");
+}
+@font-face {
+  font-family: "Poppins-Medium";
+  src: url("../../fonts/Poppins/Poppins-Medium.ttf");
+}
+@font-face {
+  font-family: "Poppins-Bold";
+  src: url("../../fonts/Poppins/Poppins-Bold.ttf");
+}
+@font-face {
+  font-family: "Poppins-Light";
+  src: url("../../fonts/Poppins/Poppins-Light.ttf");
+}
 
 /* .buttonStyle {
     background:
@@ -42,24 +41,22 @@
 } */
 
 .buttonStyle {
-  background: #62FEE2;
   padding: 20px;
-  border: transparent;
   border-radius: 10px;
   cursor: pointer;
-  color: #1e1e1e;
   text-align: center;
   font-weight: 500;
   margin: 0px;
+  background: #1e1e1e;
+  color: white;
+  border: 2px solid #62fee2;
 
   font-family: "Poppins-Regular";
   font-size: 1.3em;
   font-weight: 500;
-
 }
 .buttonStyle:hover {
-  background-color: rgba(98, 254, 225, 0.836)
-  
+  box-shadow: 0px 0px 7px 1px rgba(98, 254, 226, 1);
 }
 
 /* .buttonStyle:hover {
@@ -76,58 +73,53 @@
     color: #00FFE1;
 } */
 
-
-
-
-@media (max-width: 576px){
-    .buttonStyle {
-        width: 249px;
-        height: 43px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        font-size: 1em;
-        font-family: "Poppins-Regular";
-    }
-    .buttonStyle:hover {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-    }
+@media (max-width: 576px) {
+  .buttonStyle {
+    width: 249px;
+    height: 43px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 1em;
+    font-family: "Poppins-Regular";
+  }
+  .buttonStyle:hover {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
 }
 
-@media (min-width: 577px)  {
-    .buttonStyle {
-        width: 250px;
-        height: 50px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        font-size: 1em;
-        font-family: "Poppins-Regular";
-    }
-    .buttonStyle:hover {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-    }
-}   
-
-
+@media (min-width: 577px) {
+  .buttonStyle {
+    width: 250px;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 1em;
+    font-family: "Poppins-Regular";
+  }
+  .buttonStyle:hover {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+}
 
 @media (min-width: 1200px) {
-    .buttonStyle {
-        width: 333px;
-        height: 60px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        font-size: 1.3em;
-        font-family: "Poppins-Regular";
-    }
-    .buttonStyle:hover {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-    }
+  .buttonStyle {
+    width: 333px;
+    height: 60px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 1.3em;
+    font-family: "Poppins-Regular";
+  }
+  .buttonStyle:hover {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
 }
