--- a/src/components/buttonTurist/styles.css
+++ b/src/components/buttonTurist/styles.css
@@ -31,6 +31,7 @@
     font-style: normal;
     font-weight: 400;
     margin: 0px;
+    white-space: nowrap;
 
     font-size: 1.2em;
     width: auto;
